# xontrib-mpl

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
tests/: conftest.py  test_mpl.py  test_xontrib_mpl.py
xontrib/: mpl.py  mplhooks.py
