
[tool.poetry]
name = "xontrib-mpl"
version = "0.2.0"
description = "Matplotlib hooks for xonsh, including the new 'mpl' alias that displays the current figure on the screen"
authors = ["Xonsh Maintainers <xore.004fdbd5c8e6589bdd80944b5b8d4100.show-sender@streams.zulipchat.com>"]

license = "MIT"
readme = "README.md"

repository = "https://github.com/xonsh/xontrib-mpl"
keywords = ['xontrib', 'xonsh']
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: System :: Shells",
    "Topic :: System :: System Shells",
    "Topic :: Terminals",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]


packages = [{ include = "xontrib" }]

[tool.poetry.urls]
Documentation = "https://github.com/xonsh/xontrib-mpl/blob/master/README.md"
Code = "https://github.com/xonsh/xontrib-mpl"
"Issue tracker" = "https://github.com/xonsh/xontrib-mpl/issues"


[tool.poetry.dependencies]
python = ">=3.11"
xonsh = ">=0.23.0"
matplotlib = ">=3.0"
numpy = ">=1.20"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
include = '\.pyi?$'
force-exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.vscode
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | disk-cache.sqlite3
)/
'''
